Cleaned up code; passing container viewgroup to inflate in AlarmListFragment instead of null.